--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
     "express": "^4.18.2",
     "web3": "^4.3.0"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
