--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "lint": "eslint .",
     "format": "prettier --write \"**/*.js\""
   },
   "keywords": [],
@@ -24,6 +25,7 @@
     "node": "18.x"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "nodemon": "^3.0.2",
     "prettier": "3.1.0"
   }
