--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "lint": "eslint .",
-    "format": "prettier --write \"**/*.js\""
+    "lint": "npx eslint .",
+    "format": "npx prettier --write \"**/*.js\""
   },
   "keywords": [],
   "author": "",
